feat(counter) : Increment,Decrement and Reset the counter

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,2 +1,4 @@
-<p>home works!</p>
 <app-greeting [message]="Homemessage()" />
+<app-counter />
+
+<input type="text" placeholder="Type something" (keyup)="keyUpHandler($event)" />
