--- a/src/app/todos/todos.html
+++ b/src/app/todos/todos.html
@@ -6,9 +6,6 @@
 
 <ul class="todos">
     @for (todo of todoItems(); track todo.id) {
-    <li class="todo__item">
-        <input id="todo_{{todo.id}}" type="checkbox" [value]="todo.completed" />
-        <label for="todo_{{todo.id}}">{{ todo.title }}</label>
-    </li>
+    <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo" />
     }
 </ul>
