learn(pipe): implement it into Todo

--- a/src/app/todos/todos.html
+++ b/src/app/todos/todos.html
@@ -4,8 +4,11 @@
 <p>loading....</p>
 }
 
+<label>Filter Todos</label>
+<input [(ngModel)]="searchTerm" name="searchTerm" placeholder="search todos....">
+
 <ul class="todos">
-    @for (todo of todoItems(); track todo.id) {
+    @for (todo of todoItems() | filterTodos : searchTerm(); track todo.id) {
     <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo" />
     }
 </ul>
